fix scanner icons on iphone x

--- a/src/pages/scan/scan.scss
+++ b/src/pages/scan/scan.scss
@@ -100,6 +100,7 @@ page-scan {
         background-size: 100%;
         display: inline-block;
         margin: 2em 1em;
+        margin-bottom: calc(1em + env(safe-area-inset-bottom));
         cursor: pointer;
         // hover for desktop only
         /*body:not(.platform-cordova) &:hover {
